<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:weightSum="1">

    <Button
        android:id="@+id/temp"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/pulse"
        android:layout_below="@+id/pulse"
        android:layout_marginTop="33dp"
        android:onClick="onTempClick"
        android:text="@string/temp" />

    <Button
        android:id="@+id/location"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/ecg"
        android:layout_alignTop="@+id/temp"
        android:onClick="onLocationClick"
        android:text="@string/location" />

    <Button
        android:id="@+id/ecg"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onECGClick"
        android:text="@string/ecg"
        android:layout_alignBaseline="@+id/pulse"
        android:layout_alignBottom="@+id/pulse"
        android:layout_toEndOf="@+id/textView"
        android:layout_marginStart="37dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginTop="26dp"
        android:text="@string/welcome"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_marginStart="45dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/pulse"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView"
        android:layout_below="@+id/textView"
        android:layout_marginStart="18dp"
        android:layout_marginTop="53dp"
        android:onClick="onPulseClick"
        android:text="@string/pulse" />

</RelativeLayout>
